[workspace]
members = ["contracts/*"]

[profile.release.package.cw-disper-lockbox]
codegen-units = 1
incremental = false

[profile.release.package.cw-dsp-nft-market]
codegen-units = 1
incremental = false

[profile.release.package.cw-disper-split]
codegen-units = 1
incremental = false

[profile.release.package.cw-disper-wrap]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
