[package]
name = "cw-disper-721"
version = "0.1.0"
authors = ["Giancarlos Salas <giansalex@gmail.com>"]
edition = "2018"
description = "Basic implementation cw721 NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.14.1" }
cw0 = "0.6.2"
cw2 = "0.6.2"
cw721 = "0.6.2"
cw-storage-plus = { version = "0.6.2" , features = ["iterator"]}
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.1" }
