[package]
name = "cw-disper-lockbox"
version = "0.2.0"
authors = ["Giancarlos Salas <giansalex@gmail.com>"]
edition = "2018"
description = "Implement lockbox contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw2 = "0.10.0"
cw20 = "0.10.0"
cw-storage-plus = { version = "0.10.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
