[package]
name = "cw-dsp-nft-market"
version = "0.1.0"
authors = ["Giancarlos Salas <giansalex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std =  "1.1.0"
cosmwasm-storage =  "1.1.0"
cw-storage-plus = { version = "0.16.0", features = ["iterator"] }
cw2 = "0.16.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
