[package]
name = "cw-disper-wrap"
version = "0.5.0"
authors = ["Giancarlos Salas <giansalex@gmail.com>"]
edition = "2018"
description = "CosmWasm contract for wrapped native coin into CW20"
repository = "https://github.com/giansalex/cw-wjuno"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.10.0"
cw2 = "0.10.0"
cw20 = "0.10.0"
cw20-base = { version = "0.10.0", features = ["library"]}
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
